# kirigami-tutorial

./: .gitignore  CMakeLists.txt
lesson_0/: README.md
lesson_0/src/: CMakeLists.txt
lesson_1/: README.md  org.kde.tutorial.desktop
lesson_1/src/: CMakeLists.txt  Main.qml  main.cpp
lesson_2/: README.md
lesson_2/src/: CMakeLists.txt  Main.qml  main.cpp
lesson_3/: README.md
lesson_3/src/: CMakeLists.txt  Main.qml  main.cpp
lesson_4/src/: CMakeLists.txt  Main.qml  main.cpp
lesson_5/: README.md
lesson_5/src/: CMakeLists.txt  main.cpp
